# VolWare

./: LICENSE  README.md
mcu/volware/: volware.ino
pc-app/: CMakeLists.txt  resources.rc
pc-app/include/: Config.h  SerialReader.h  VolumeController.h  WindowsAutostart.h  WindowsTray.h  resources.h
pc-app/include/VolumeController/: VolumeController.h  VolumeControllerImpl_Windows.h
pc-app/src/: Config.cpp  SerialReader.cpp  VolumeController.cpp  WindowsTray.cpp  main.cpp
pc-app/src/VolumeController/: VolumeController.cpp  VolumeControllerImpl_Windows.cpp
volumeflex/: volumeflex.ino
